added footer, added html to all pages

--- a/about.html
+++ b/about.html
@@ -28,6 +28,31 @@
     </header>
     <!-- HEADER END -->
 
+    <div id="wrapper">
+        <!-- FIRST COLUMN START -->
+        <!-- profile image-->
+        <img src="img/marc.jpeg">
+        <!-- FIRST COLUMN END -->
+
+        <!-- SECOND COLUMN START -->
+        <!-- title -->
+        <h3>About</h3>
+        <!-- about paragraph -->
+        <p>Hello, I am Marc. This is my portfolio where I share all of my favorite work.</p>
+        <p>If you would like to follow me on Twitter, my username is <a href="https://twitter.com"
+                target="_blank">@username</a>.</p>
+        <!-- SECOND COLUMN END -->
+    </div>
+    <!-- FOOTER START -->
+    <footer>
+        <!-- Twitter link that is clickable, and that opens in a new tab -->
+        <a href="https://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter"></a>
+        <!-- Facebook link that is clickable, and that opens in a new tab -->
+        <a href="https://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook"></a>
+        <!-- Copyright info -->
+        <p>&copy; 2021 Marc</p>
+    </footer>
+    <!-- FOOTER END -->
 </body>
 
 </html>
