--- a/index.html
+++ b/index.html
@@ -28,6 +28,48 @@
     </header>
     <!-- HEADER END -->
 
+    <!-- GALLERY START -->
+    <div id="wrapper">
+        <ul>
+            <li>
+                <img src="img/numbers-01.jpg" alt="Number 1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+
+            <li>
+                <img src="img/numbers-02.jpg" alt="Number 2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+
+            <li>
+                <img src="img/numbers-06.jpg" alt="Number 6">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+
+            <li>
+                <img src="img/numbers-09.jpg" alt="Number 9">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+
+            <li>
+                <img src="img/numbers-12.jpg" alt="Number 12">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </li>
+        </ul>
+    </div>
+    <!-- GALLERY END -->
+
+    <!-- FOOTER START -->
+    <footer>
+        <!-- Twitter link that is clickable, and that opens in a new tab -->
+        <a href="https://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter"></a>
+        <!-- Facebook link that is clickable, and that opens in a new tab -->
+        <a href="https://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook"></a>
+        <!-- Copyright info -->
+        <p>&copy; 2021 Marc</p>
+    </footer>
+    <!-- FOOTER END -->
+
 </body>
 
 </html>
