--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,40 @@
     </header>
     <!-- HEADER END -->
 
+    <div id="wrapper">
+        <!-- START FIRST COLUMN -->
+        <section id="primary">
+            <!-- title -->
+            <h3>General Information</h3>
+            <!-- general information paragraph -->
+            <p>For general inquiries, the best way to reach me is by <a href="mailto:username@email.com">email</a>.</p>
+        </section>
+        <!-- END FIRST COLUMN -->
+
+        <!-- START SECOND COLUMN -->
+        <section id="secondary">
+            <!-- title -->
+            <h3>Contact Information</h3>
+            <!-- contact information -->
+            <ul>
+                <li><a href="tel:5021234567">(502) 123-4567</a></li>
+                <li><a href="mailto:username@email.com">username@email.com</a></li>
+                <li><a href="https://twitter.com" target="_blank">@username</a></li>
+            </ul>
+        </section>
+        <!-- END SECOND COLUMN -->
+    </div>
+
+    <!-- FOOTER START -->
+    <footer>
+        <!-- Twitter link that is clickable, and that opens in a new tab -->
+        <a href="https://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter"></a>
+        <!-- Facebook link that is clickable, and that opens in a new tab -->
+        <a href="https://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook"></a>
+        <!-- Copyright info -->
+        <p>&copy; 2021 Marc</p>
+    </footer>
+    <!-- FOOTER END -->
 </body>
 
 </html>
