--- a/about.html
+++ b/about.html
@@ -7,13 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TITLE TAG -->
     <title>Marc | Front End Web Developer</title>
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <!-- HEADER START -->
     <header>
         <!-- Title that is clickable and brings you to index -->
-        <a href="index.html">
+        <a id="logo" href="index.html">
             <h1>Marc</h1>
             <h2>Front End Web Developer</h2>
         </a>
@@ -21,7 +27,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Portfolio</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#" class="selected">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -31,7 +37,7 @@
     <div id="wrapper">
         <!-- FIRST COLUMN START -->
         <!-- profile image-->
-        <img src="img/marc.jpeg">
+        <img class="profile-photo" src="img/marc.jpeg">
         <!-- FIRST COLUMN END -->
 
         <!-- SECOND COLUMN START -->
@@ -46,9 +52,11 @@
     <!-- FOOTER START -->
     <footer>
         <!-- Twitter link that is clickable, and that opens in a new tab -->
-        <a href="https://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter"></a>
+        <a href="https://twitter.com" target="_blank"><img class="social-icon" src="img/twitter-wrap.png"
+                alt="Twitter"></a>
         <!-- Facebook link that is clickable, and that opens in a new tab -->
-        <a href="https://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook"></a>
+        <a href="https://facebook.com" target="_blank"><img class="social-icon" src="img/facebook-wrap.png"
+                alt="Facebook"></a>
         <!-- Copyright info -->
         <p>&copy; 2021 Marc</p>
     </footer>
